--- a/src/app/hotel-info/hotel-info.component.html
+++ b/src/app/hotel-info/hotel-info.component.html
@@ -40,11 +40,11 @@
         </div>
       </div>
       <div class="hotelMap" style="padding-bottom: 16px;">
-        <!-- <p class="boldFont">แผนที่</p>
+        <p class="boldFont">แผนที่</p>
         <div class="mapContainer" style='margin:auto;'>
           <google-map height="100%" width="100%" [zoom]="zoom" [center]="myLatLng" ></google-map>
-        </div> -->
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        </div>
+
       </div>
       <!-- <div class="hotelReview">
         <p>THIS IS REVIEW</p>
